--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -7,7 +7,7 @@ tools:context=".TwoFragment">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="one"
+    android:text="two"
     android:textSize="40dp"
     android:textStyle="bold"
     android:layout_centerInParent="true"/>
