--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5D5D5D"
-    tools:context=".OneFragment">
+    tools:context=".DayFragment.OneFragment">
 
     <TextView
         android:id="@+id/textView"
