--- a/app/src/main/res/layout/fragment_seven.xml
+++ b/app/src/main/res/layout/fragment_seven.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#5D5D5D"
-tools:context=".SevenFragment">
+tools:context=".DayFragment.SevenFragment">
 
 <TextView
     android:id="@+id/textView"
