--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#5D5D5D"
-tools:context=".TwoFragment">
+tools:context=".DayFragment.TwoFragment">
 
 <TextView
     android:id="@+id/textView"
